--- a/SalesWeb/Views/Home/About.cshtml
+++ b/SalesWeb/Views/Home/About.cshtml
@@ -4,4 +4,9 @@
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Teste @ViewData["Teste"].</p>
+
+<address>
+    <strong>Mais informações: </strong> <a href="https://github.com/jhony-dev/Sales2019">Meu projeto</a>
+</address>
+ 
